--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </ul>
     <h2>Skils</h2>
     <ul>
-      <li>Website Development</li>
+      <li>Website & App Developer</li>
       <li>Google Ads Managment</li>
       <li>Professional Guitar Player & Singer</li>
     </ul>
